--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
       class="bg-emerald-600 text-white shadow-lg fixed top-0 left-0 right-0 z-50"
     >
       <div class="flex items-center justify-between px-4 py-3">
-        <h1 class="text-xl font-bold">Foodie</h1>
+        <a
+          href="#home"
+          class="text-xl font-bold hover:text-emerald-100 transition-colors"
+          >Foodie</a
+        >
         <button id="hamburger" class="text-white focus:outline-none">
           <svg
             class="w-6 h-6"
@@ -236,7 +240,7 @@
     </nav>
 
     <!-- Main Content Area -->
-    <main id="app-content" class="pt-16 pb-6 px-4 max-w-2xl mx-auto">
+    <main id="app-content" class="pt-16 pb-6 px-4 max-w-7xl mx-auto">
       <!-- Content will be dynamically loaded here -->
     </main>
 
