--- a/index.html
+++ b/index.html
@@ -123,6 +123,26 @@
           <span>Home</span>
         </a>
         <a
+          href="#recipe-finder"
+          data-page="recipe-finder"
+          class="nav-link flex items-center py-2 hover:bg-emerald-800 px-2 rounded"
+        >
+          <svg
+            class="w-5 h-5 mr-3"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+            ></path>
+          </svg>
+          <span>Recipe Finder</span>
+        </a>
+        <a
           href="#recipes"
           data-page="recipes"
           class="nav-link flex items-center py-2 hover:bg-emerald-800 px-2 rounded"
@@ -140,7 +160,7 @@
               d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"
             ></path>
           </svg>
-          <span>Recipes</span>
+          <span>My Recipes</span>
         </a>
         <a
           href="#fridge"
