feat: iOS PWA support

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <meta
       name="description"
       content="Foodie - Your AI-powered recipe generator"
@@ -11,10 +14,23 @@
     <title>Foodie - AI Recipe Generator</title>
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/foodie/manifest.json" />
 
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="assets/icons/icon-192x192.svg" />
+    <!-- iOS PWA Support -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Foodie" />
+    <link rel="apple-touch-icon" href="/foodie/assets/icons/icon-192x192.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="/foodie/assets/icons/icon-192x192.svg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="512x512"
+      href="/foodie/assets/icons/icon-512x512.svg"
+    />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
